--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "cols, rows = 5, 5\n",
+    "cols, rows = 6, 6,\n",
     "testloader = DataLoader(test_data, test_label, batch_size=cols*rows, shuffle=True)\n",
     "image_data, label_data = testloader[0]\n",
     "\n",
