--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -56,7 +56,7 @@
     }
    ],
    "source": [
-    "from dataset import get_data_from_torchvision_datasets\n",
+    "from Get_Datasets import get_data_from_torchvision_datasets\n",
     "from CNN_lib import Linear, Conv2d, MaxPool2d, ReLU, Flatten, Sequential, Cross_entropy, SGD, DataLoader\n",
     "import numpy as np\n",
     "import time\n",
