--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -5,20 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CNN from scratch: Demo\n",
-    "\n",
-    "<br> Here is a demo for my NumPy-based, PyTorch-style CNN model. I tried to replicate some functions in the torch library like nn.Sequential, nn.Conv2d and Autograd. You might find some of the expression in this program quite familiar. By the way, my favourite one is loss.backward(). :)\n",
-    "\n",
-    "<br> Training this model for 1 epoch takes roughly 7 minutes on my Apple M1 chip, while training an equivalent model using PyTorch takes 20 seconds. \n",
-    "\n",
-    "<br> ---------------------------\n",
-    "<br> CNN architechture: LeNet\n",
-    "<br> Datasets: MNIST \n",
-    "<br> Training duration: 1 epoch \n",
-    "<br> Test accuracy: ~97% \n",
-    "<br> ---------------------------\n",
-    "\n",
-    "<br> Note that I replaced the sigmoid in the original LeNet with ReLU, and used MaxPooling rather than AveragePooling. Other model specs are completely the same."
+    "## CNN from scratch: Demo"
    ]
   },
   {
