--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -106,15 +106,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (Optional) Load pre-trained model"
+    "### (Optional) Load pre-trained model\n",
+    "To save your time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from Get_Datasets import get_data_from_torchvision_datasets\n",
+    "from CNN_lib import Linear, Conv2d, MaxPool2d, ReLU, Flatten, Sequential, Cross_entropy, SGD, DataLoader\n",
+    "import numpy as np\n",
+    "import time\n",
+    "# get data\n",
+    "train_data, train_label, test_data, test_label = get_data_from_torchvision_datasets()\n",
+    "\n",
     "model = Sequential(\n",
     "    Conv2d(in_channels=1, out_channels=6, kernel_size=5, stride=1, padding=2),\n",
     "    ReLU(),\n",
@@ -264,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -272,20 +280,20 @@
      "output_type": "stream",
      "text": [
       "\t\tforward\t\tbackward\n",
-      "Conv2d    |\t84.738s\t\t225.460s\n",
-      "ReLU      |\t0.622s\t\t0.945s\n",
-      "MaxPool2d |\t11.190s\t\t48.979s\n",
-      "Conv2d    |\t18.044s\t\t52.954s\n",
-      "ReLU      |\t0.277s\t\t0.777s\n",
-      "MaxPool2d |\t3.413s\t\t9.043s\n",
-      "Flatten   |\t0.181s\t\t0.023s\n",
-      "Linear    |\t0.834s\t\t1.421s\n",
-      "ReLU      |\t0.064s\t\t0.143s\n",
-      "Linear    |\t0.192s\t\t0.340s\n",
-      "ReLU      |\t0.042s\t\t0.128s\n",
-      "Linear    |\t0.053s\t\t0.185s\n",
+      "Conv2d    |\t2.206s\t\t5.655s\n",
+      "ReLU      |\t0.024s\t\t0.069s\n",
+      "MaxPool2d |\t1.122s\t\t10.147s\n",
+      "Conv2d    |\t0.403s\t\t1.744s\n",
+      "ReLU      |\t0.012s\t\t0.019s\n",
+      "MaxPool2d |\t0.191s\t\t1.451s\n",
+      "Flatten   |\t0.032s\t\t0.005s\n",
+      "Linear    |\t0.171s\t\t0.185s\n",
+      "ReLU      |\t0.012s\t\t0.010s\n",
+      "Linear    |\t0.072s\t\t0.117s\n",
+      "ReLU      |\t0.010s\t\t0.009s\n",
+      "Linear    |\t0.010s\t\t0.036s\n",
       "----------------------------------------\n",
-      "Total forward + backward time : 460.0488s\n"
+      "Total forward + backward time : 23.7098s\n"
      ]
     }
    ],
@@ -296,33 +304,6 @@
     "print('-'*40)\n",
     "print(f'Total forward + backward time : {sum(model.forward_time[i]+model.backward_time[i] for i in model.forward_time):.4f}s')"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
