--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +141,9 @@
     "    Linear(84, 10),\n",
     "    )\n",
     "\n",
-    "model.load_model('pretrained_model.npy')\n",
+    "model.load_model('pretrained_model_5_epochs.npy')\n",
     "# or \n",
-    "# model.load_model('pretrained_model_15_epochs.npy')"
+    "# model.load_model('pretrained_model.npy')"
    ]
   },
   {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
      "output_type": "stream",
      "text": [
       "------------------------------\n",
-      "test_accuracy : 97.41%\n",
+      "test_accuracy : 98.58%\n",
       "------------------------------\n"
      ]
     }
