--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## CNN from scratch: Demo\n",
     "\n",
-    "(Training this model for 1 epoch takes roughly 7 minutes on Apple M1 chip. You can opt to skip the first section and load a pre-trained model in the next section.)"
+    "(Training this model for 1 epoch takes roughly 5 minutes on Apple M1 chip. You can opt to skip the first section and load a pre-trained model in the next section.)"
    ]
   },
   {
@@ -97,11 +97,12 @@
     "print('Traninig completed!')\n",
     "print(f'Total training time:{time.time() - starting_time:.4f}s')\n",
     "print(f'Training iteration :', iteration)\n",
-    "# 1 epoch of training takes about 5 minutes on Apple M1 chip\n",
     "\n",
     "# save trained model to 'pretrained_model.npy'\n",
     "model.save_model('pretrained_model')\n",
-    "print('Model saved.')"
+    "print('Model saved.')\n",
+    "\n",
+    "# 1 epoch of training takes about 5 minutes on Apple M1 chip"
    ]
   },
   {
