--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -5,7 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CNN from scratch: Demo\n",
+    "# CNN from scratch\n",
+    "### Demo: Building LeNet\n",
     "\n",
     "(Training this model for 1 epoch takes roughly 5 minutes on Apple M1 chip. You can opt to skip the first section and load a pre-trained model in the next section.)"
    ]
