--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -275,7 +275,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Time consumption for for each forward and backward pass in each layer"
+    "### Total time consumption for forward and backward passes in each layer during training."
    ]
   },
   {
